# pyloscan

./: .replit  pyproject.toml  requirements  setup.py
.streamlit/: config.toml
