[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloscan"
version = "1.0.0"
description = "PyloScan - AI-powered H. Pylori infection prediction system"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.50.0",
    "pandas",
    "numpy",
    "plotly",
    "scikit-learn",
    "joblib",
    "imbalanced-learn",
    "xgboost",
    "scipy",
    "seaborn",
    "matplotlib",
    "google-genai>=1.43.0",
    "openai>=2.3.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["data*", "models*", "attached_assets*"]
