[project]
name = "PyloScan"
version = "1.0.0"
description = "PyloScan - AI-powered H. Pylori infection prediction system"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.50.0",
    "pandas",
    "numpy",
    "plotly",
    "scikit-learn",
    "joblib",
    "imbalanced-learn",
    "xgboost",
    "scipy",
    "seaborn",
    "matplotlib",
    "google-genai>=1.43.0",
    "openai>=2.3.0",
]
